@@ -780,6 +780,8 @@ repl call, 0x44580E,	0x44760E,	0x44588E,	"Unit_has_king_ability_for_find_unsuppo
 define,	   0x4BFD20,	0x4C72E0,	0x4BFDB0,	"City_get_turns_to_build_2",			"int (__fastcall *) (City * this, int edx, City_Order * order, bool param_2)"
 repl call, 0x45FF66,	0x462336,	0x45FFE6,	"City_get_turns_to_build_2_for_ai_move_leader",	""
 repl call, 0x4600F8,	0x4624E5,	0x460178,	"City_get_turns_to_build_2_for_ai_move_leader",	""
+define,	   0x50FDB3,	0x51A057,	0x50FE53,	"ADDR_MAX_TRADABLE_CITY_ID",			"byte *"
+define,	   0x505B21,	0x50F8EB,	0x505BC1,	"ADDR_TRADABLE_CITIES_SIZE_TO_CLEAR",		"byte *"
 
 ignore,	   0x5FC710,	0x0,		0x0,		"PCX_Image_create_and_init_jgl_image",		"int (__fastcall *) (PCX_Image * this, int edx, int width, int height, int bit_depth, int param_4, int param_5, int param_6)"
 ignore,	   0x5FCC50,	0x0,		0x0,		"PCX_Image_draw_region_to_location",		"void (__fastcall *) (PCX_Image * this, int edx, PCX_Image * canvas, int src_x, int src_y, int dest_x, int dest_y, int width, int height)"
